// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should currectly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
     Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`should currectly render ExpensesSummary with multiply expense 1`] = `
<div>
  <h1>
     Viewing 
    23
     
    expenses
     totalling 
    $2,345,678,987.65
  </h1>
</div>
`;
